增加歌曲进度条拖拽，音量调整，以及无登录收藏及播放列表页面
无登录收藏及播放列表页面待定，因为比较丑现在

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
 
 		<!-- 我的音乐 -->
 		<section class="panel my_music color" id="my_music" data-icon="2">
-
+			<div class="no-login">
+				<h4>啊哦，还没登录哦！快去登录添加音乐吧~</h4>
+				<img src="src/imgs/noLogin.gif" class="no-login-img" alt="快去登录吧" title="快去登录吧~"/>
+			</div>
 			<div class="u_title clrfix">
 				<h3 class='l'>歌曲列表</h3>
 				<span class="sub l">
@@ -201,7 +204,10 @@
 
 		<!-- 我的收藏 -->
 		<section class="panel my_collect" id="my_collect" data-icon="3">
-
+			<div class="no-login">
+				<h4>啊哦，还没登录哦！快去登录添加音乐吧~</h4>
+				<img src="src/imgs/noLogin.gif" class="no-login-img" alt="快去登录吧" title="快去登录吧~"/>
+			</div>
 			<div class="u_title clrfix">
 				<h3 class='l'>我的收藏</h3>
 				<span class="sub l">
