歌曲播放bug调整

--- a/index.html
+++ b/index.html
@@ -75,13 +75,13 @@
 		<!-- 我的音乐 -->
 		<section class="panel my_music color" id="my_music" data-icon="2">
 			<div class="no-login">
-				<h4>啊哦，还没登录哦！快去登录添加音乐吧~</h4>
-				<img src="src/imgs/noLogin.gif" class="no-login-img" alt="快去登录吧" title="快去登录吧~"/>
+				<h4>啊哦，还没有音乐哦！快去添加音乐吧~</h4>
+				<img src="src/imgs/noLogin.gif" class="no-login-img"/>
 			</div>
 			<div class="u_title clrfix">
 				<h3 class='l'>歌曲列表</h3>
 				<span class="sub l">
-					<span id="flag_trackCount">12</span>
+					<span id="flag_trackCount">0</span>
 					首歌
 				</span>
 			</div>
@@ -205,13 +205,13 @@
 		<!-- 我的收藏 -->
 		<section class="panel my_collect" id="my_collect" data-icon="3">
 			<div class="no-login">
-				<h4>啊哦，还没登录哦！快去登录添加音乐吧~</h4>
-				<img src="src/imgs/noLogin.gif" class="no-login-img" alt="快去登录吧" title="快去登录吧~"/>
+				<h4>啊哦，还没音乐哦！快去添加音乐吧~</h4>
+				<img src="src/imgs/noLogin.gif" class="no-login-img"/>
 			</div>
 			<div class="u_title clrfix">
 				<h3 class='l'>我的收藏</h3>
 				<span class="sub l">
-					<span id="flag_trackCount">16</span>
+					<span id="flag_trackCount">0</span>
 					首歌
 				</span>
 			</div>
@@ -375,9 +375,7 @@
 		</div> -->
 	</div>
 
-	<audio id="Audio">
-		<source src="" type="audio/mpeg">
-	</audio>
+	<audio id="Audio"></audio>
 	<!-- 底部播放面板结束 -->
 
 
