添加分页，联调接口，更改了一下下PHP文件

--- a/index.html
+++ b/index.html
@@ -74,24 +74,27 @@
 
 		<!-- 我的音乐 -->
 		<section class="panel my_music color" id="my_music" data-icon="2">
-			<div class="no-login">
-				<h4>啊哦，还没有音乐哦！快去添加音乐吧~</h4>
-				<img src="src/imgs/noLogin.gif" class="no-login-img"/>
-			</div>
 			<div class="u_title clrfix">
 				<h3 class='l'>播放列表</h3>
 				<span class="sub l">
 					<span id="flag_trackCount">0</span>
 					首歌
 				</span>
-				<span class="r" >全部播放</span>
+				<!-- <span class="r" >全部播放</span> -->
 			</div>
+			<div class="no-login">
+				<h4>啊哦，还没有音乐哦！快去添加音乐吧~</h4>
+				<img src="src/imgs/noLogin.gif" class="no-login-img"/>
+			</div>
+			
 			<div class="u_title_list">
 				<table class="m_table" id="playList" cellpadding="0" cellspacing="0">
 					<tbody>
 					</tbody>
 				</table>
 			</div>
+			<div class="list-pre" page-id="1" title="上一页"> < </div>
+			<div class="list-nxt" page-id="2" title="下一页"> > </div>
 		</section>
 		<!-- 我的音乐 end -->
 
@@ -111,105 +114,11 @@
 			<div class="u_title_list">
 				<table class="m_table" cellpadding="0" cellspacing="0">
 					<tbody>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
-						<tr>
-							<td class="m_list_num"><span >1</span></td>
-							<td class="music_name"><div>Teenage Dream</div></td>
-							<td class="music_singer"><div>Katy Perry </div></td>
-							<td class="plays"><div class='play'></div></td>
-							<td class="collects"><div class="collect"></div></td>
-							<td class="dels"><div class="del">-</div></td>
-						</tr>
 					</tbody>
 				</table>
 			</div>
+			<div class="list-pre" page-id="1" title="上一页"> < </div>
+			<div class="list-nxt" page-id="2" title="下一页"> > </div>
 		</section>
 		<!-- 我的收藏end -->
 
@@ -238,17 +147,17 @@
 				</div>
 			</div>
 			<a id="vol" href="javascript:;" hidefocus="true" data-action="volume" class="icn icn-vol"></a>
-			<a href="javascript:;" hidefocus="true" data-action="mode" id="mode" class="icn icn-list" title="单曲循环"></a>
+			<a href="javascript:;" hidefocus="true" data-action="mode" id="mode" class="icn icn-list" title="列表循环"></a>
 			<a href="javascript:;" data-action="add" class="icn icn-add j-flag" title="添加到播放列表"></a>
 			<div class="heart" rel="unlike" title="收藏歌曲"></div>
 		</div>
 		<!-- 声音调节 & 播放方式 end -->
 		
-		<a href="javascript:;" hidefocus="true" data-action="prev" class="pre" title="上一首(ctrl+←)"></a>
-		<div class="album-cover play-rotate">
+		<a href="javascript:;" hidefocus="true" data-action="prev" class="pre" title="上一首"></a>
+		<div class="album-cover">
 			<img src="src/imgs/default_album.jpg">
 		</div>
-		<a href="javascript:;" hidefocus="true" data-action="next" class="nxt" title="下一首(ctrl+→)"></a>
+		<a href="javascript:;" hidefocus="true" data-action="next" class="nxt" title="下一首"></a>
 
 		<!-- 歌曲显示 -->
 		<div class="mus-box">
