--- a/index.html
+++ b/index.html
@@ -100,16 +100,16 @@
 
 		<!-- 我的收藏 -->
 		<section class="panel my_collect" id="my_collect" data-icon="3">
-			<div class="no-login">
-				<h4>啊哦，还没音乐哦！快去添加音乐吧~</h4>
-				<img src="src/imgs/noLogin.gif" class="no-login-img"/>
-			</div>
 			<div class="u_title clrfix">
 				<h3 class='l'>我的收藏</h3>
 				<span class="sub l">
 					<span id="flag_trackCount">0</span>
 					首歌
 				</span>
+			</div>
+			<div class="no-login">
+				<h4>啊哦，还没音乐哦！快去添加音乐吧~</h4>
+				<img src="src/imgs/noLogin.gif" class="no-login-img"/>
 			</div>
 			<div class="u_title_list">
 				<table class="m_table" cellpadding="0" cellspacing="0">
@@ -192,22 +192,22 @@
 	    		<span class="active-title">登录</span>
 	      	</h1>
 		  	<div class="l-left-wrap l">
-		  			<p class="rlf-tip-globle " id="signin-globle-error"></p>
+	  			<p class="rlf-tip-globle " id="signin-globle-error"></p>
 
-		  			<div class="rlf-group">
-		  				<input type="text" value="" id="js-name" minlength="6" maxlength="20" autocomplete="off" class="ipt ipt-email js-own-name" required/>
-		  				<label for="doc-vld-name-2">请输入用户名</label>
-		  				<p class="rlf-tip-wrap" id="js-login-name"></p>
-		  			</div>
+	  			<div class="rlf-group">
+	  				<input type="text" value="" id="js-name" minlength="6" maxlength="20" autocomplete="off" class="ipt ipt-email js-own-name" required/>
+	  				<label for="doc-vld-name-2">请输入用户名</label>
+	  				<p class="rlf-tip-wrap" id="js-login-name"></p>
+	  			</div>
 
-		  			<div class="rlf-group proclaim-loc js-proclaim-on ">
-		  				<input type="password" name="password" data-validate="password" class="ipt ipt-pwd js-pass-pwd"  maxlength="16"  id="js-password" autocomplete="off">
-		  				<label>6-16位密码，区分大小写，不能用空格</label>
-		  		        <p class="rlf-tip-wrap" id="js-login-password"></p>
-		  			</div>
-		  			<div class="rlf-group clrfix">
-		  				<button id="signin-btn" class="btn-red btn-full">登录</button>
-		  			</div>
+	  			<div class="rlf-group proclaim-loc js-proclaim-on ">
+	  				<input type="password" name="password" data-validate="password" class="ipt ipt-pwd js-pass-pwd"  maxlength="16"  id="js-password" autocomplete="off">
+	  				<label>6-16位密码，区分大小写，不能用空格</label>
+	  		        <p class="rlf-tip-wrap" id="js-login-password"></p>
+	  			</div>
+	  			<div class="rlf-group clrfix">
+	  				<button id="signin-btn" class="btn-red btn-full">登录</button>
+	  			</div>
 		  	</div>
 		  	<p class="change_link r" >还没账号?快来<a href="javascript:;" class='reg'>注册</a></p>
 	    </div>
@@ -247,6 +247,9 @@
 	<div class="modal-backdrop modal-backdropss"></div>
 	<!-- 登录、注册 and  遮罩 end -->
 
+	<!-- 成功、失败提示 -->
+	<div class="ok icon iconfont">&#xebd6;</div>
+	<div class="error icon iconfont">&#xebd8;</div>
 
 	<!-- <script>
 		var iWidth = document.documentElement.clientWidth;
